--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(Train.Validate.Test)
 export(TrainModels)
 export(cbind.na)
 export(collect.garbage)
+export(data.frame.na)
 export(get.bootResults)
 export(get.cvResults)
 export(get.para)
